# daily-minutes

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  news-cli  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.sh  test_ai_features.py  test_background_refresh.py  test_dashboard_news.py  test_dashboard_verification.py  test_news_fetch.py  test_startup_timing.py
images/: arch.mermaid  cap.mermaid  langgraph.mermaid  mcp.mermaid  rag.mermaid  react.mermaid  remoting.mermaid  rlhf.mermaid
scripts/: populate_weather_cache.py  preload_all_data.py
src/agents/: __init__.py  base_agent.py  calendar_agent.py  email_agent.py  news_agent.py  news_agent_ai.py  react_agent.py
src/cli/: news_cli.py
src/connectors/: __init__.py  hackernews.py  rss.py  weather.py
src/core/: config.py  config_manager.py  http_client.py  logging.py  metrics.py  models.py  scheduler_config.py
src/database/: __init__.py  schema.sql  sqlite_manager.py
src/memory/: __init__.py  embedding_service.py  models.py  retrieval.py  vector_store.py
src/models/: __init__.py  async_base.py  base.py  cache.py  calendar.py  chat.py  email.py  news.py  notification.py  observability.py  preferences.py  slack.py  summary.py  task.py  weather.py
src/observability/: __init__.py  langfuse_service.py
src/security/: __init__.py  encryption_service.py
src/services/: article_analyzer.py  background_refresh.py  (+19 more)
tests/: MOCK_EMAIL_SETUP.md  docker-compose.mock-email.yml  load_mock_data.py  mock_calendar_data.py  mock_email_server.py
(+95 files in other folders)
