[tool.poetry]
name = "daily-minutes"
version = "0.1.0"
description = "A pragmatic agentic AI system for daily intelligence gathering"
authors = ["Shahzad Bhatti<bhatti@plexobject.com>"]
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (run with -m integration)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
